<resources>
    <string name="app_name">Contest Notifier</string>
    <string name="button_log_in">Log in</string>
    <string name="label_username">Email or username</string>
    <string name="label_password">Password</string>
    <string name="error_empty_username">Email or username cannot be empty.</string>
    <string name="error_password_required">Password is required.</string>
    <string name="msg_network_problem">Connectivity problem!</string>
    <string name="label_or">OR</string>
    <string name="button_register">Register</string>
    <string name="msg_error">Ooops! Something went wrong!</string>
    <string name="label_email">Email</string>
    <string name="label_usernameOnly">Username</string>
    <string name="label_name">Full name</string>
    <string name="label_workplace">Workplace</string>
    <string name="label_confirm_password">Re-enter password</string>
    <string name="error_empty_name">Name cannot be empty</string>
    <string name="error_empty_workplace">Workplace is required</string>
    <string name="error_password_confirm">Re-enter password again</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="label_confirm_code">Confirm Activation Code</string>
    <string name="label_enter_code">Enter confirmation code</string>
    <string name="button_submit">Submit</string>
    <string name="button_resend">Resend code</string>
    <string name="msg_account_activation">Your account has been activated successfully!</string>
    <string name="error_code_mismatch">Invalid code!</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_settings">Settings</string>
    <string name="msg_logout">You have been logged out!</string>
    <string name="powered_by_hi5">Powered by Hi5</string>
    <string name="menu_admin_panel">Admin panel</string>
    <string name="error_permission">Permission required to select media</string>
    <string name="msg_file_chosen">File chosen successfully</string>
    <string name="label_add_website">Add a contest platform</string>
    <string name="label_website_url">Platform platform url</string>
    <string name="label_logo">Platform logo</string>
    <string name="button_choose">Choose</string>
    <string name="button_upload">Upload</string>
    <string name="button_save">Submit</string>
    <string name="error_empty_url">Url cannot be empty</string>
    <string name="label_website_name">Platform name</string>
    <string name="label_add_contest">Add a contest</string>
    <string name="label_select_platform">Select contest platform</string>
    <string name="label_contest_name">Contest name</string>
    <string name="label_contest_url">Contest link</string>
    <string name="button_select_time">Select time</string>
    <string name="button_select_day">Select day</string>
    <string name="error_empty_contest_name">Contest name cannot be empty</string>
    <string name="error_website_selection">Please select a platform</string>
    <string name="error_division_selection">Please select a division</string>
    <string name="label_contest_duration">Contest duration: </string>
    <string name="label_hour">:</string>
    <string name="label_minute">:</string>
    <string name="label_day">:</string>
    <string name="label_duration">Duration: </string>
    <string name="emtpy_contests">No contests found</string>
</resources>
