<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="apps.ahqmrf.contestnotifier.auth.ui.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_email"
                style="@style/InputStyle"
                android:layout_marginTop="40dp"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/input_username"
                style="@style/InputStyle"
                android:layout_marginTop="16dp"
                android:hint="@string/label_usernameOnly"
                android:inputType="text"/>

            <EditText
                android:id="@+id/input_name"
                style="@style/InputStyle"
                android:layout_marginTop="16dp"
                android:hint="@string/label_name"
                android:inputType="text"/>

            <EditText
                android:id="@+id/input_workplace"
                style="@style/InputStyle"
                android:layout_marginTop="16dp"
                android:hint="@string/label_workplace"
                android:inputType="text"/>

            <EditText
                android:id="@+id/input_password"
                style="@style/InputStyle"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:hint="@string/label_password"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/input_confirm_password"
                style="@style/InputStyle"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:hint="@string/label_confirm_password"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/button_register"
                style="@style/ButtonAccent"
                android:layout_marginTop="16dp"
                android:text="@string/button_register"/>

        </LinearLayout>

    </ScrollView>

    <com.rey.material.widget.ProgressView
        android:id="@+id/progress_layout"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:pv_autostart="true"
        app:pv_circular="true"
        app:pv_progressMode="indeterminate"
        app:pv_progressStyle="@style/Material.Drawable.CircularProgress"/>


</RelativeLayout>
