<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_username"
            style="@style/InputStyle"
            android:layout_marginTop="40dp"
            android:hint="@string/label_username"
            android:inputType="text"/>

        <EditText
            android:id="@+id/input_password"
            style="@style/InputStyle"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/label_password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/button_login"
            style="@style/ButtonAccent"
            android:layout_marginTop="16dp"
            android:text="@string/button_log_in"/>


        <TextView
            android:id="@+id/button_register"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:paddingStart="@dimen/button_margin"
            android:paddingEnd="@dimen/button_margin"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:clickable="true"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:layout_marginTop="24dp"/>

    </LinearLayout>

    <com.rey.material.widget.ProgressView
        android:id="@+id/progress_layout"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:pv_autostart="true"
        app:pv_circular="true"
        app:pv_progressMode="indeterminate"
        app:pv_progressStyle="@style/Material.Drawable.CircularProgress"/>

</RelativeLayout>