<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="apps.ahqmrf.contestnotifier.admin.ui.AdminPanelActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/add_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/dropdownWebsite"
                    android:layout_width="40dp"
                    android:layout_height="56dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:padding="8dp"
                    android:src="@drawable/ic_arrow_drop_down_black_24dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/label_add_website"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/whitey_grey"/>


            <LinearLayout
                android:id="@+id/layout_add_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <EditText
                    android:id="@+id/input_name"
                    style="@style/InputStyle"
                    android:layout_marginTop="16dp"
                    android:hint="@string/label_website_name"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/input_website_url"
                    style="@style/InputStyle"
                    android:layout_marginTop="16dp"
                    android:hint="@string/label_website_url"
                    android:inputType="textUri"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <ImageView
                        android:id="@+id/btn_upload"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="@dimen/hz_margin"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="@dimen/hz_margin"
                        android:layout_marginStart="0dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:padding="8dp"
                        android:src="@drawable/ic_file_upload_black_24dp"
                        android:tint="@color/colorPrimaryDark"/>

                    <ImageView
                        android:id="@+id/btn_choose"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_toLeftOf="@id/btn_upload"
                        android:layout_toStartOf="@id/btn_upload"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:padding="8dp"
                        android:src="@drawable/ic_add_a_photo_black_24dp"
                        android:tint="@color/colorPrimaryDark"/>

                    <EditText
                        android:id="@+id/input_logo"
                        style="@style/InputStyle"
                        android:enabled="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/label_logo"
                        android:inputType="text"
                        android:layout_alignBottom="@+id/btn_choose"
                        android:layout_toLeftOf="@+id/btn_choose"
                        android:layout_toStartOf="@+id/btn_choose"/>

                </RelativeLayout>


                <Button
                    android:id="@+id/btn_save"
                    style="@style/ButtonAccent"
                    android:layout_marginTop="16dp"
                    android:text="@string/button_save"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/whitey_grey"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_contest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/dropdownContest"
                    android:layout_width="40dp"
                    android:layout_height="56dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:padding="8dp"
                    android:src="@drawable/ic_arrow_drop_down_black_24dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/label_add_contest"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/whitey_grey"/>

            <include layout="@layout/layout_add_contest"/>

        </LinearLayout>

    </ScrollView>


    <com.rey.material.widget.ProgressView
        android:id="@+id/progress_layout"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:pv_autostart="true"
        app:pv_circular="true"
        app:pv_progressMode="indeterminate"
        app:pv_progressStyle="@style/Material.Drawable.CircularProgress"/>

</RelativeLayout>
